@@ -18,26 +18,29 @@ import org.openqa.selenium.remote.LocalFileDetector;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 public class DriverParameterResolver implements ParameterResolver, AfterEachCallback {
 
     public static final String DRIVER_KEY = "wh-webDriver";
-    private static final String PROPERTY_STORE_PATH = "C:\\development\\willhaben-test-utils\\misc\\src\\main\\resources\\willhaben.properties";
     private static Logger logger = LogManager.getLogger();
     private WebDriver driver;
+
+    public static WebDriver getWebDriverFromStore(ExtensionContext extensionContext) {
+        ExtensionContext.Store store = extensionContext.getStore(ExtensionContext.Namespace.GLOBAL);
+        return (WebDriver) store.get(DRIVER_KEY);
+    }
 
     @Override
     public boolean supportsParameter(ParameterContext parameterContext, ExtensionContext extensionContext) throws ParameterResolutionException {
         Class<?> type = parameterContext.getParameter().getType();
-        if (AppiumDriver.class.isAssignableFrom(type)) {
-            return true;
-        } else if (WebDriver.class.isAssignableFrom(type)) {
+        if (WebDriver.class.isAssignableFrom(type)) {
             return true;
         } else {
             return false;
@@ -48,18 +51,19 @@ public class DriverParameterResolver implements ParameterResolver, AfterEachCall
     public Object resolveParameter(ParameterContext parameterContext, ExtensionContext extensionContext) throws ParameterResolutionException {
         ExtensionContext.Store store = extensionContext.getStore(ExtensionContext.Namespace.GLOBAL);
         BrowserOptionInterceptor browserOptionInterceptor = getBrowserOptionInterceptor(extensionContext);
+        List<WebDriverPostInterceptor> driverPostInterceptorList = getBrowserPostProcess(extensionContext);
         String seleniumHub = System.getProperty("seleniumHub");
         if (PlatformUtils.isAndroid()) {
             if (RemoteSelectionUtils.isRemote()) {
                 URL seleniumHubUrl = convertSeleniumHubToURL(seleniumHub);
-                driver = new AndroidDriver<>(seleniumHubUrl,browserOptionInterceptor.getAndroidCapabilities());
+                driver = new AndroidDriver<>(seleniumHubUrl, browserOptionInterceptor.getAndroidCapabilities());
             } else {
                 driver = new AndroidDriver<>(browserOptionInterceptor.getAndroidCapabilities());
             }
         } else if (PlatformUtils.isIOS()) {
             if (RemoteSelectionUtils.isRemote()) {
                 URL seleniumHubUrl = convertSeleniumHubToURL(seleniumHub);
-                driver = new IOSDriver<>(seleniumHubUrl,browserOptionInterceptor.getIOsCapabilities());
+                driver = new IOSDriver<>(seleniumHubUrl, browserOptionInterceptor.getIOsCapabilities());
             } else {
                 driver = new IOSDriver<>(browserOptionInterceptor.getIOsCapabilities());
             }
@@ -96,44 +100,25 @@ public class DriverParameterResolver implements ParameterResolver, AfterEachCall
         } else {
             throw new RuntimeException("The specified platform '" + PlatformUtils.getPlatform() + "' is not supported.");
         }
+        driverPostInterceptorList.forEach(postProcessor -> postProcessor.postProcessWebDriver(driver));
         store.put(DRIVER_KEY, driver);
         return driver;
     }
 
     private URL convertSeleniumHubToURL(String seleniumHub) {
-        URI uri;
         try {
-            uri = new URI(seleniumHub);
-        } catch (URISyntaxException e) {
-            throw new RuntimeException("Couldn't create URI from '" + seleniumHub + "'", e);
-        } catch (NullPointerException e) {
-            throw new NullPointerException("The seleniumHub system property was not set! Use with -DseleniumHub='ExampleValue'");
-        }
-        URL seleniumHubUrl;
-        try {
-            seleniumHubUrl = uri.toURL();
+            return new URL(seleniumHub);
         } catch (MalformedURLException e) {
             throw new RuntimeException("Malformed url created", e);
         }
-        return seleniumHubUrl;
     }
 
     @Override
     public void afterEach(ExtensionContext extensionContext) throws Exception {
-        ExtensionContext.Store store = extensionContext.getStore(ExtensionContext.Namespace.GLOBAL);
-
-        WebDriver driver = (WebDriver) store.get(DRIVER_KEY);
+        driver = getWebDriverFromStore(extensionContext);
         if (driver != null) {
             driver.quit();
         }
-    }
-
-    public WebDriver getWebDriver() {
-        if (driver == null) {
-            throw new RuntimeException("WebDriver has not been created. Did you use this class as a junit rule? " +
-                    "Can it be, that the before method has not been called?");
-        }
-        return driver;
     }
 
     private BrowserOptionInterceptor getBrowserOptionInterceptor(ExtensionContext context) {
@@ -158,25 +143,23 @@ public class DriverParameterResolver implements ParameterResolver, AfterEachCall
         }
     }
 
-    private WebDriverPostInterceptor getBrowserPostProcess(ExtensionContext context) {
+    private List<WebDriverPostInterceptor> getBrowserPostProcess(ExtensionContext context) {
         BrowserUtil browserUtil = context.getRequiredTestMethod().getAnnotation(BrowserUtil.class);
         if (browserUtil == null) {
             browserUtil = context.getRequiredTestClass().getAnnotation(BrowserUtil.class);
         }
         if (browserUtil == null) {
-            return new DefaultWebDriverPostInterceptor();
+            return Collections.emptyList();
         }
-        Optional<Class<? extends BrowserUtilExtension>> webDriverPostInterceptor = Arrays.stream(browserUtil.value())
+        return Arrays.stream(browserUtil.value())
                 .filter(WebDriverPostInterceptor.class::isAssignableFrom)
-                .findFirst();
-        if (webDriverPostInterceptor.isPresent()) {
-            try {
-                return (WebDriverPostInterceptor) webDriverPostInterceptor.get().getConstructor().newInstance();
-            } catch (Exception e) {
-                throw new RuntimeException("Can't instantiate BrowserOption", e);
-            }
-        } else {
-            return new DefaultWebDriverPostInterceptor();
-        }
+                .map(webDriverInterceptor -> {
+                    try {
+                        return (WebDriverPostInterceptor) webDriverInterceptor.getConstructor().newInstance();
+                    } catch (Exception e) {
+                        throw new RuntimeException("Can't instantiate BrowserOption", e);
+                    }
+                })
+                .collect(Collectors.toList());
     }
 }
